Fix sidebar region spacing

--- a/source/_patterns/03-templates/00-layouts/_page.scss
+++ b/source/_patterns/03-templates/00-layouts/_page.scss
@@ -38,6 +38,10 @@ $sidebar-row-gap: rem(36);
       grid-template-columns: minmax($sidebar-min, 22rem) minmax(0, 1fr);
     }
 
+    // Vertical spacing if both sidebar regions are present.
+    aside + aside {
+      margin-top: $general-v-spacing;
+    }
   }
 
   &__content {
